# QuantumShield

./: .env.example  .gitignore  .replit  FLASK_README.md  QUANTUM_VOTER_README.md  QUICKSTART.md  README.md  README_FLASK.md  SECURITY_DEMO_README.md  app.py  bell_shield_demo.py  create_serverless_zip.sh  cybersecurity_training.py  database.py  demo_quantum_security.py  file_monitor.py  flask_app.py  generate_ssl_cert.py  main.py  malware_detector.py  pyproject.toml  quantum_demo.py  quantum_gate_visualizer.py  quantum_gate_viz.py  quantum_recovery.py  quantum_security.db  quantum_voter.py  quantumshield.db  ransomware_detector.py  replit.md  requirements-serverless.txt  requirements.txt  run_security_demo.py  security_encryption.py  setup_database.py  start_flask.sh  start_services.sh  stop_services.sh  test_api.py  test_quantum_recovery.py  (+2 more)
.github/: copilot-instructions.md
repl_nix_workspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ssl/: cert.pem
ssl_backup/: key.pem
templates/: base.html  file_monitor.html  index.html  threat_detection.html
