[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "plotly>=6.5.0",
    "psutil>=7.1.3",
    "psycopg2-binary>=2.9.11",
    "pylatexenc>=2.10",
    "pygame>=2.6.0",
    "qiskit>=2.2.3",
    "qiskit-aer>=0.17.2",
    "qutip>=5.0.4",
    "qutip-qip>=0.4.0",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
]
